# react-wasm-app

./: .babelrc  .gitignore  README.md  index.css  index.html  package-lock.json  package.json  webpack.config.js
src/: app.js  assemblyProps.js  demo.js  login.js  nav.js  reactAssembly.js  reactEvent.js  reactjsx.js  wasm.js
wasm-app/: Cargo.toml
wasm-app/pkg/: package.json  wasm_app.d.ts  wasm_app.js  wasm_app_bg.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
wasm-app/src/: lib.rs
